New config params

--- a/etc/template/media_config.conf
+++ b/etc/template/media_config.conf
@@ -3,6 +3,11 @@ resolution_4_3_enable=true
 video_rotation=0
 video_hflip=false
 video_vflip=false
+video_brightness=50
+video_contrast=0
+video_shutter=0
+video_analog_gain=0
+video_digital_gain=0
 use_dynamic_video_resolution=true
 fixed_video_resolution=640x480
 video_resolution_list_4_3=320x240,400x300,512x384,640x480,1024x768,1152x864,1296x972,1640x1232
